# agent_debate

./: .gitignore  README.md  arxiv_test.py  basic_debate.py  basic_debate_log.txt  evaluate.py  example_debate_transcript.md_evaluation_results.json  graph_debate.py  head_to_head_debate.py  kb_query_debate.py  kb_query_debate_log.txt  kg.json  kg_debate_log.txt  log.txt  main.py  notes.md  planning_debate.py  planning_query_debate_log.txt  project_outline.md  pyproject.toml  temp.json  test.py  test_kb.py  test_pdf_summarize.py
debate_logs/: planning_vs_kb_debate_log.txt
debate_results/: basic_2_vs_basic.md  basic_2_vs_basic.txt  graph_for_vs_basic_against_0.md  graph_for_vs_basic_against_0.txt  graph_for_vs_kb_against_2.md  graph_for_vs_kb_against_2.txt  graph_for_vs_planning_against_1.md  graph_for_vs_planning_against_1.txt  kb_for_vs_basic_against_0.md  kb_for_vs_basic_against_0.txt  kb_for_vs_graph_against_0.md  kb_for_vs_graph_against_0.txt  kb_for_vs_graph_against_2.md  kb_for_vs_graph_against_2.txt  kb_for_vs_planning_against_1.md  kb_for_vs_planning_against_1.txt  planned_vs_Graph_For_AI_Regulation.md  planned_vs_Graph_For_AI_Regulation.txt  planned_vs_KB_For_AI_Regulation.md  planned_vs_KB_For_AI_Regulation.txt  planned_vs_basic.md  planned_vs_basic.txt  planning_for_vs_basic_against_0.md  planning_for_vs_basic_against_0.txt  planning_for_vs_graph_against_2.md  planning_for_vs_graph_against_2.txt  planning_for_vs_kb_against_0.md  planning_for_vs_kb_against_0.txt  planning_for_vs_kb_against_1.md  planning_for_vs_kb_against_1.txt
planned_kb/: For Agent.json  (+7 more)
(+47 files in other folders)
